# eiskaltdcpp

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  renovate.json
.github/workflows/: package.yaml
dcpp/: CMakeLists.txt  File.cpp  File.h  Text.cpp
dht/: CMakeLists.txt
eiskaltdcpp-cli/: CMakeLists.txt
eiskaltdcpp-daemon/: CMakeLists.txt
eiskaltdcpp-gtk/: CMakeLists.txt
eiskaltdcpp-qt/: CMakeLists.txt
extra/: CMakeLists.txt
haiku/: CMakeLists.txt
json/: CMakeLists.txt
json/jsonrpc-cpp/: mongoose.c
macos/: build-using-homebrew.sh  homebrew-toolchain.cmake
